--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 language: python
 python:
   - "3.6"
-  - "3.7"
-  - "3.8"
 
 install:
   - pip install -r requirements.txt
 
-script: python3 test.py
+script: python3 stochastic_search.py
