--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,12 @@ install:
   - pip install -r requirements.txt
 
 script: python3 stochastic_search.py
+
+deploy:
+  provider: releases
+  api_key: "GITHUB OAUTH TOKEN"
+  file_glob: true
+  file: build/*
+  skip_cleanup: true
+  on:
+    tags: true
