--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script: python3 stochastic_search.py
 
 deploy:
   provider: releases
-  api_key: "GITHUB OAUTH TOKEN"
+  api_key: "GITHUB_TOKEN"
   file_glob: true
   file: build/*
   skip_cleanup: true
