--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script: python3 stochastic_search.py
 
 deploy:
   provider: releases
-  api_key: "%{GITHUB_TOKEN}"
+  api_key: "b36f79a6c44768f4aa333be4b4d152ccc6c17480"
   file_glob: true
   file: build/*
   skip_cleanup: true
