--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ install:
 
 script: python3 stochastic_search.py
 
+before_deploy:
+      - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')}
+      - git tag $TRAVIS_TAG
+
 deploy:
   provider: releases
   api_key: $GITHUB_TOKEN
