--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
 script: python3 stochastic_search.py
 
 before_deploy:
-      - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')}
+      - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y-%m-%d_%H-%M')}
       - git tag $TRAVIS_TAG
 
 deploy:
