--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,28 @@ python:
 install:
   - pip install -r requirements.txt
 
-script: python3 stochastic_search.py
-
-before_deploy:
+jobs:
+  include:
+    - stage: round 1
+      script: python3 round_1.py
+    - stage: round 2
+      script: python3 round_2.py
+    - stage: round 3
+      script: python3 stochastic_search.py
+    - stage: deploy
+      before_deploy:
       - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y-%m-%d_%H-%M')}
       - git tag $TRAVIS_TAG
+      deploy:
+        provider: releases
+        api_key: $GITHUB_TOKEN
+        file_glob: true
+        file: build/*.csv
+        skip_cleanup: true
+        on:
+          tags: false
 
-deploy:
-  provider: releases
-  api_key: $GITHUB_TOKEN
-  file_glob: true
-  file: build/*.csv
-  skip_cleanup: true
-  on:
-    tags: false
+
+
+
+
