--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ jobs:
   include:
     - stage: round 1
       script: python3 round_1.py
-      skip_cleanup: true
+      cache:
+        directories:
+        - $HOME/temp
     - stage: round 2
       script: python3 round_2.py
       skip_cleanup: true
