--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,13 @@ jobs:
   include:
     - stage: round 1
       script: python3 round_1.py
-      cache:
-        directories:
-        - $HOME/temp
+      cache: pip
     - stage: round 2
       script: python3 round_2.py
-      skip_cleanup: true
+      cache: pip
     - stage: round 3
       script: python3 stochastic_search.py
+      cache: pip
     - stage: deploy
       before_deploy:
       - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y-%m-%d_%H-%M')}
