--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,34 @@ jobs:
     - stage: round 2
       script: python3 round_2.py
       cache: pip
-    - stage: round 3 and deploy
+    - stage: round 3
+      script: python3 round_2.py
+      cache: pip
+    - stage: round 4
+      script: python3 round_2.py
+      cache: pip
+    - stage: round 5
+      script: python3 round_2.py
+      cache: pip
+    - stage: round 6
+      script: python3 round_2.py
+      cache: pip
+    - stage: round 7
+      script: python3 round_2.py
+      cache: pip
+    - stage: round 8
+      script: python3 round_2.py
+      cache: pip
+    - stage: round 9
+      script: python3 round_2.py
+      cache: pip
+    - stage: round 10
+      script: python3 round_2.py
+      cache: pip
+    - stage: round 11
+      script: python3 round_2.py
+      cache: pip
+    - stage: final round and deploy
       script: python3 stochastic_search.py
       cache: pip
       before_deploy:
