--- a/.travis.yml
+++ b/.travis.yml
@@ -5,56 +5,42 @@ python:
 install:
   - pip install -r requirements.txt
 
-stages:
-  - round_1
-  - round_2
-  - round_3
-  - round_4
-  - round_5
-  - round_6
-  - round_7
-  - round_8
-  - round_9
-  - round_10
-  - round_11
-  - final_round_and_deploy
-
 jobs:
   include:
-    - stage: round_1
+    - stage: "round_1"
       script: python3 round_1.py
       cache: pip
-    - stage: round_2
+    - stage: "round_2"
       script: python3 round_2.py
       cache: pip
-    - stage: round_3
+    - stage: "round_3"
       script: python3 round_2.py
       cache: pip
-    - stage: round_4
+    - stage: "round_4"
       script: python3 round_2.py
       cache: pip
-    - stage: round_5
+    - stage: "round_5"
       script: python3 round_2.py
       cache: pip
-    - stage: round_6
+    - stage: "round_6"
       script: python3 round_2.py
       cache: pip
-    - stage: round_7
+    - stage: "round_7"
       script: python3 round_2.py
       cache: pip
-    - stage: round_8
+    - stage: "round_8"
       script: python3 round_2.py
       cache: pip
-    - stage: round_9
+    - stage: "round_9"
       script: python3 round_2.py
       cache: pip
-    - stage: round_10
+    - stage: "round_10"
       script: python3 round_2.py
       cache: pip
-    - stage: round_11
+    - stage: "round_11"
       script: python3 round_2.py
       cache: pip
-    - stage: final_round_and_deploy
+    - stage: "final_round_and_deploy"
       script: python3 stochastic_search.py
       cache: pip
       before_deploy:
