--- a/.travis.yml
+++ b/.travis.yml
@@ -39,48 +39,153 @@ jobs:
     - stage: round_2
       script: python3 round_2.py
       cache: pip
+      deploy:
+        provider: s3
+        access_key_id: $AWS_ACCESS_KEY_ID
+        secret_access_key: $AWS_SECRET_KEY
+        bucket: "comp2019opt"
+        skip_cleanup: true
+        local_dir: temp
     - stage: round_3
       script: python3 round_2.py
       cache: pip
+      deploy:
+        provider: s3
+        access_key_id: $AWS_ACCESS_KEY_ID
+        secret_access_key: $AWS_SECRET_KEY
+        bucket: "comp2019opt"
+        skip_cleanup: true
+        local_dir: temp
     - stage: round_4
       script: python3 round_2.py
       cache: pip
+      deploy:
+        provider: s3
+        access_key_id: $AWS_ACCESS_KEY_ID
+        secret_access_key: $AWS_SECRET_KEY
+        bucket: "comp2019opt"
+        skip_cleanup: true
+        local_dir: temp
     - stage: round_5
       script: python3 round_2.py
       cache: pip
+      deploy:
+        provider: s3
+        access_key_id: $AWS_ACCESS_KEY_ID
+        secret_access_key: $AWS_SECRET_KEY
+        bucket: "comp2019opt"
+        skip_cleanup: true
+        local_dir: temp
     - stage: round_6
       script: python3 round_2.py
       cache: pip
+      deploy:
+        provider: s3
+        access_key_id: $AWS_ACCESS_KEY_ID
+        secret_access_key: $AWS_SECRET_KEY
+        bucket: "comp2019opt"
+        skip_cleanup: true
+        local_dir: temp
     - stage: round_7
       script: python3 round_2.py
       cache: pip
+      deploy:
+        provider: s3
+        access_key_id: $AWS_ACCESS_KEY_ID
+        secret_access_key: $AWS_SECRET_KEY
+        bucket: "comp2019opt"
+        skip_cleanup: true
+        local_dir: temp
     - stage: round_8
       script: python3 round_2.py
       cache: pip
+      deploy:
+        provider: s3
+        access_key_id: $AWS_ACCESS_KEY_ID
+        secret_access_key: $AWS_SECRET_KEY
+        bucket: "comp2019opt"
+        skip_cleanup: true
+        local_dir: temp
     - stage: round_9
       script: python3 round_2.py
       cache: pip
+      deploy:
+        provider: s3
+        access_key_id: $AWS_ACCESS_KEY_ID
+        secret_access_key: $AWS_SECRET_KEY
+        bucket: "comp2019opt"
+        skip_cleanup: true
+        local_dir: temp
     - stage: round_10
       script: python3 round_2.py
       cache: pip
+      deploy:
+        provider: s3
+        access_key_id: $AWS_ACCESS_KEY_ID
+        secret_access_key: $AWS_SECRET_KEY
+        bucket: "comp2019opt"
+        skip_cleanup: true
+        local_dir: temp
     - stage: round_11
       script: python3 round_2.py
       cache: pip
+      deploy:
+        provider: s3
+        access_key_id: $AWS_ACCESS_KEY_ID
+        secret_access_key: $AWS_SECRET_KEY
+        bucket: "comp2019opt"
+        skip_cleanup: true
+        local_dir: temp
     - stage: round_12
       script: python3 round_2.py
       cache: pip
+      deploy:
+        provider: s3
+        access_key_id: $AWS_ACCESS_KEY_ID
+        secret_access_key: $AWS_SECRET_KEY
+        bucket: "comp2019opt"
+        skip_cleanup: true
+        local_dir: temp
     - stage: round_13
       script: python3 round_2.py
       cache: pip
+      deploy:
+        provider: s3
+        access_key_id: $AWS_ACCESS_KEY_ID
+        secret_access_key: $AWS_SECRET_KEY
+        bucket: "comp2019opt"
+        skip_cleanup: true
+        local_dir: temp
     - stage: round_14
       script: python3 round_2.py
       cache: pip
+      deploy:
+        provider: s3
+        access_key_id: $AWS_ACCESS_KEY_ID
+        secret_access_key: $AWS_SECRET_KEY
+        bucket: "comp2019opt"
+        skip_cleanup: true
+        local_dir: temp
     - stage: round_15
       script: python3 round_2.py
       cache: pip
+      deploy:
+        provider: s3
+        access_key_id: $AWS_ACCESS_KEY_ID
+        secret_access_key: $AWS_SECRET_KEY
+        bucket: "comp2019opt"
+        skip_cleanup: true
+        local_dir: temp
     - stage: round_16
       script: python3 round_2.py
       cache: pip
+      deploy:
+        provider: s3
+        access_key_id: $AWS_ACCESS_KEY_ID
+        secret_access_key: $AWS_SECRET_KEY
+        bucket: "comp2019opt"
+        skip_cleanup: true
+        local_dir: temp
     - stage: final_round_and_deploy
       script: python3 stochastic_search.py
       cache: pip
