--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,8 @@ install:
 jobs:
   include:
     - stage: round_1
-      script: python3 round_1.py
+      script: g++ -pthread -lpthread -O3 -std=c++17 -o round_1 round_1.cpp
+      script: ./round_1
       cache: pip
       deploy:
         provider: s3
