--- a/.travis.yml
+++ b/.travis.yml
@@ -198,7 +198,7 @@ jobs:
         secret_access_key: $AWS_SECRET_KEY
         bucket: "comp2019opt"
         skip_cleanup: true
-        local_dir: build
+        local_dir: temp
 
 
 
